ideas 0.1.0.9002: get chirps, chelsa, tmf, modis

--- a/envs/dev-ideas.yml
+++ b/envs/dev-ideas.yml
@@ -1,4 +1,4 @@
-name: dev-dc
+name: dev-ideas
 channels:
   - conda-forge
 dependencies:
@@ -26,3 +26,5 @@ dependencies:
   - salem
   - gcsfs
   - zarr
+  - earthengine-api
+  - xee
