--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,11 @@ book:
   date: last-modified
   chapters:
     - index.qmd
+    - areas.qmd
+    - chirps.qmd
+    - chelsa.qmd
+    - tmf.qmd
+    - modis.qmd
   appendices:
     - literature.qmd
     - meetings.qmd
@@ -18,7 +23,7 @@ bibliography: references.bib
 format:
   html:
     theme: cosmo
-    code-fold: true
+    code-fold: false
     number-depth: -1
 
 editor: visual
