ideas 0.1.0.9005: delta precipitation january ~ tmf changes

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,7 @@ book:
     - index.qmd
     - landuse.qmd
     - temperature.qmd
+    - precipitation.qmd
   appendices:
     - literature.qmd
     - meetings.qmd
