ideas 0.1.0.9007: etp & vpd (era5 should not be trusted)

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,8 @@ book:
     - index.qmd
     - temperature.qmd
     - precipitation.qmd
+    - evapotranspiration.qmd
+    - vpd.qmd
   appendices:
     - literature.qmd
     - meetings.qmd
