ideas 0.1.0.901: larger pr & tas

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,8 @@ book:
     - forest.qmd
     - temperature.qmd
     - precipitation.qmd
+    - large_pr.qmd
+    - large_tas.qmd
   appendices:
     - literature.qmd
     - meetings.qmd
