ideas 0.1.0.9011: summarised colombian amazon

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,8 +11,7 @@ book:
     - forest.qmd
     - temperature.qmd
     - precipitation.qmd
-    - large_pr.qmd
-    - large_tas.qmd
+    - large.qmd
   appendices:
     - literature.qmd
     - meetings.qmd
